fix(pagination): align group text size with size prop (#4416)

--- a/src/Pagination/styles/_pagination-group.scss
+++ b/src/Pagination/styles/_pagination-group.scss
@@ -1,10 +1,31 @@
 @use '../../internals/Box/styles/index' as box;
 
 .rs-pagination-group {
-  --pagination-group-gap: calc(var(--rs-spacing) * 2.5);
+  --rs-pagination-font-size-xs: var(--rs-font-size-xs);
+  --rs-pagination-font-size-sm: var(--rs-font-size-sm);
+  --rs-pagination-font-size-md: var(--rs-font-size-sm);
+  --rs-pagination-font-size-lg: var(--rs-font-size-md);
+  --rs-pagination-group-gap: calc(var(--rs-spacing) * 2.5);
+
+  &-total,
+  &-skip {
+    font-size: var(--rs-pagination-font-size-md);
+  }
+
+  $sizes: (xs, sm, md, lg);
+
+  @each $size in $sizes {
+    &[data-size='#{$size}'] {
+      .rs-pagination-group-total,
+      .rs-pagination-group-skip {
+        font-size: var(--rs-pagination-font-size-#{$size});
+      }
+    }
+  }
+
   display: flex;
   align-items: center;
-  gap: var(--pagination-group-gap);
+  gap: var(--rs-pagination-group-gap);
 
   &-grow {
     flex-grow: 1;
